Mexendo no Jenkinsfile

--- a/Demanda3/index.html
+++ b/Demanda3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
         <script>
 !function(){"use strict";!function(){function e(e){try{return void 0!==globalThis[e]}catch(e){return!1}}function t(){var e={};return{setItem:function(t,o){return e[t]=String(o)},getItem:function(t){return e.hasOwnProperty(t)?e[t]:void 0},removeItem:function(t){return delete e[t]},clear:function(){return e={}}}}e("localStorage")||(delete globalThis.localStorage,globalThis.localStorage=t()),e("sessionStorage")||(delete globalThis.sessionStorage,globalThis.sessionStorage=t())}()}();
